// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ColumnNB
  onPress={[Function]}
>
  <RowNB
    size={1}
    style={
      Object {
        "marginLeft": 15,
        "marginRight": 15,
        "marginTop": 15,
      }
    }
  >
    <ColumnNB>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "fontSize": 8,
          }
        }
      >
        01.01.2017
      </Text>
    </ColumnNB>
    <ColumnNB>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "fontSize": 8,
            "textAlign": "right",
          }
        }
      >
        KL: 
        03:00:00
      </Text>
    </ColumnNB>
  </RowNB>
  <RowNB
    size={3}
    style={
      Object {
        "marginLeft": 15,
      }
    }
  >
    <ColumnNB>
      <RowNB
        size={4}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontSize": 11,
            }
          }
        >
          123
        </Text>
      </RowNB>
      <RowNB
        size={6}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontFamily": "Gotham-Bold",
              "fontSize": 12,
            }
          }
        />
      </RowNB>
    </ColumnNB>
  </RowNB>
  <RowNB
    size={4}
  >
    <ReceiptTotals
      discount={20}
      small={true}
      style={
        Object {
          "marginBottom": 5,
          "marginRight": 15,
        }
      }
      total={1200}
    />
  </RowNB>
</ColumnNB>
`;

exports[`renders correctly with customer name 1`] = `
<ColumnNB
  onPress={[Function]}
>
  <RowNB
    size={1}
    style={
      Object {
        "marginLeft": 15,
        "marginRight": 15,
        "marginTop": 15,
      }
    }
  >
    <ColumnNB>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "fontSize": 8,
          }
        }
      >
        01.01.2017
      </Text>
    </ColumnNB>
    <ColumnNB>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "fontSize": 8,
            "textAlign": "right",
          }
        }
      >
        KL: 
        03:00:00
      </Text>
    </ColumnNB>
  </RowNB>
  <RowNB
    size={3}
    style={
      Object {
        "marginLeft": 15,
      }
    }
  >
    <ColumnNB>
      <RowNB
        size={4}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontSize": 11,
            }
          }
        >
          123
        </Text>
      </RowNB>
      <RowNB
        size={6}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontFamily": "Gotham-Bold",
              "fontSize": 12,
            }
          }
        >
          CUSTOMER
        </Text>
      </RowNB>
    </ColumnNB>
  </RowNB>
  <RowNB
    size={4}
  >
    <ReceiptTotals
      discount={20}
      small={true}
      style={
        Object {
          "marginBottom": 5,
          "marginRight": 15,
        }
      }
      total={1200}
    />
  </RowNB>
</ColumnNB>
`;
